// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShoppingItem Component should render empty given no item 1`] = `
<li>
  <h2
    style={
      Object {
        "textDecoration": null,
      }
    }
  />
  <button
    type="button"
  >
    check
  </button>
  <button
    type="button"
  >
    delete
  </button>
</li>
`;

exports[`ShoppingItem Component should render the item when supplied 1`] = `
<li>
  <h2
    style={
      Object {
        "textDecoration": null,
      }
    }
  >
    test-item
  </h2>
  <button
    type="button"
  >
    check
  </button>
  <button
    type="button"
  >
    delete
  </button>
</li>
`;

exports[`ShoppingItem Component should strike through checked items 1`] = `
<li>
  <h2
    style={
      Object {
        "textDecoration": "line-through",
      }
    }
  >
    checked-item
  </h2>
  <button
    type="button"
  >
    check
  </button>
  <button
    type="button"
  >
    delete
  </button>
</li>
`;
